--- a/app.css
+++ b/app.css
@@ -1,6 +1,6 @@
 li {
     list-style-type: none;
-    height: 80px;
+    height: 55px;
     border: 2px solid grey;
     margin: 20px 0 0 0;
     padding: 5px 0 0 10px;
@@ -9,4 +9,8 @@ li {
 
 span {
     white-space: nowrap;
+}
+
+.button-group {
+    float: right;
 }
