--- a/app.css
+++ b/app.css
@@ -1,14 +1,29 @@
+body {
+    font-family: 'Indie Flower', cursive;
+    background-color: #2B2B2B;
+}
+
+h1 {
+    font-family: 'Indie Flower', cursive;
+    color: whitesmoke;
+}
+
 li {
     list-style-type: none;
     height: 55px;
     border: 2px solid grey;
     margin: 20px 0 0 0;
     padding: 5px 0 0 10px;
-    background-color: whitesmoke;
+    font-size: 25px;
+    background-color: #E9E581;
 }
 
 span {
     white-space: nowrap;
+}
+
+span:focus {
+    outline-color: #DE1B1B;
 }
 
 .button-group {
